--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
         <div class="profile-content-wrapper">
           <h1><b>Hope you understand the cause!</b></h1>
           <p>Hi I am Divyanshu Kontey. I have designed this website to make people aware of what farmers suffer from and what 
-            kind of struggels they go throught. With this website I want to initiate the cause <b>"For The Farmers"</b>.
+            kind of struggels they go through. With this website I want to initiate the cause <b>"For The Farmers"</b>.
           </p>
 
           <p>As we know Farmer are not only suffering but also their voice remains unheard most of the times because the main media
